--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "react-native": "0.75.2",
     "react-native-animated-nav-tab-bar": "^3.1.11",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-devsettings": "^1.0.5",
     "react-native-gesture-handler": "^2.19.0",
+    "react-native-image-picker": "^7.2.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.18.0",
     "react-native-ratings": "^8.1.0",
-    "react-native-reanimated": "^3.14.0",
+    "react-native-reanimated": "^3.16.5",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
