--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -37,7 +37,8 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
-
+# Java 17 path for Gradle
+org.gradle.java.home=/usr/local/opt/openjdk@17/libexec/openjdk.jdk/Contents/Home
 
 MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
 MYAPP_RELEASE_KEY_ALIAS=my-key-alias
