--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.75.2",
     "react-native-animated-nav-tab-bar": "^3.1.11",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-devsettings": "^1.0.5",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.18.0",
