--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "6.0.12",
     "@react-navigation/native-stack": "6.2.5",
     "@react-navigation/stack": "6.2.3",
+    "axios": "^1.7.9",
     "i18next": "^22.4.15",
     "lottie-react-native": "^5.1.4",
     "react": "18.3.1",
@@ -29,7 +30,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.18.0",
     "react-native-ratings": "^8.1.0",
-    "react-native-reanimated": "^3.14.0",
+    "react-native-reanimated": "^3.16.7",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
