--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "6.0.12",
     "@react-navigation/native-stack": "6.2.5",
     "@react-navigation/stack": "6.2.3",
+    "axios": "^1.7.9",
     "i18next": "^22.4.15",
     "lottie-react-native": "^5.1.4",
     "react": "18.3.1",
@@ -26,11 +27,10 @@
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-devsettings": "^1.0.5",
     "react-native-gesture-handler": "^2.19.0",
-    "react-native-image-picker": "^7.2.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.18.0",
     "react-native-ratings": "^8.1.0",
-    "react-native-reanimated": "^3.16.5",
+    "react-native-reanimated": "^3.16.7",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
@@ -48,8 +48,6 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native-community/cli": "^15.1.3",
-    "@react-native-community/cli-platform-android": "^15.1.3",
     "@react-native/babel-preset": "0.75.2",
     "@react-native/eslint-config": "0.75.2",
     "@react-native/metro-config": "0.75.2",
