--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/stack": "6.2.3",
     "axios": "^1.7.9",
     "i18next": "^22.4.15",
+    "lodash": "^4.17.21",
     "lottie-react-native": "^5.1.4",
     "react": "18.3.1",
     "react-native": "0.75.2",
